# things-to-render-things

./: .gitignore  CMakeLists.txt  README.md
kernels/: defines.hcl  helpers.hcl  pathtracing.cl  raytracer.hcl  raytracing.hcl  rendering.cl  test.cl  types.hcl
src/: .pathtracer_renderer.cc.swp  CMakeLists.txt  defines.hh  framework.cc  framework.hh  helpers.hh  main.cc  mapping.cc  mapping.hh  matrix.cc  matrix.hh  opencl_wrapping.cc  opencl_wrapping.hh  pathtracer_framework.cc  pathtracer_framework.hh  pathtracer_renderer.cc  pathtracer_renderer.hh  pathtracer_scene.hh  raytracing.cc  raytracing.hh  renderer.cc  renderer.hh  scoped_timer.hh  types.hh  vectors.cc  vectors.hh  viewer.cc  viewer.hh
